fixing bug with nav button and missing padding on mobile

--- a/assets/style/task-property.css
+++ b/assets/style/task-property.css
@@ -745,3 +745,7 @@ footer {
 .fa-pinterest {
     background: #cb2027;
 }
+
+.navbar {
+    flex-wrap: nowrap;
+}
